# Fair

./: .env.example  .replit  README.md  UPGRADE_SUMMARY.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  test_advanced_features.py  vite.config.ts
attached_assets/: Pasted--1-Authentication-and-Role-Based-Access-Security-Foundation-Your-system-cannot-function-withou-1762671135416_1762671135420.txt  Pasted--1-What-s-the-project-Name-FairLens-Fairness-Drift-Alert-System-Domain-Ethical-AI-in-Banki-1762671065279_1762671065281.txt  Pasted--FAIRLENS-FULL-SCALE-FEATURE-SPECIFICATION-Goal-Turn-FairLens-from-a-demo-into-a-deployable-AI-1762663042495_1762663042496.txt  Pasted--Phase-1-Establish-Enterprise-FeaturesTo-sell-this-the-judges-need-to-see-proof-of-the-features--1762680575840_1762680575841.txt  Pasted--Prompt-for-implementing-FairLens-Fairness-Drift-Alert-System-complete-no-detail-omitted--1762588354098_1762588354100.txt  Pasted--What-s-missing-in-your-backend-the-real-engine-flaws-Here-s-the-blunt-truth-No-real-time-com-1762668671523_1762668671524.txt  Pasted--What-s-missing-in-your-backend-the-real-engine-flaws-Here-s-the-blunt-truth-No-real-time-com-1762668695015_1762668695015.txt  Pasted--What-s-wrong-right-now-No-authentication-UI-Anyone-who-knows-the-dashboard-URL-can-access-it--1762671875854_1762671875857.txt  Pasted--What-you-aimed-for-You-wanted-Real-fairness-drift-tracking-not-a-one-time-audit-Real-bias--1762662825320_1762662825320.txt  (+8 more)
biascheck_backend/: __init__.py  auth.py  blockchain_anchor.py  compliance_logger.py  config.py  (+8 more)
(+65 files in other folders)
